<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="nombre_app">Compra en Casa</string>

    <string name="lista_producto">Lista de Productos</string>
    <string name="carro_compra">Carrito de Compras</string>
    <string name="nombre">Nombre</string>
    <string name="precio_unitario">Precio Unitario</string>
    <string name="cantidad">Cantidad</string>
    <string name="ver">Ver</string>
    <string name="accion">Acción</string>
    <string name="agregar">Agregar</string>
    <string name="precio">Precio</string>
    <string name="precio_total">Precio Total</string>
    <string name="remover">Remover</string>
    <string name="limpiar_carro">Limpiar Carro</string>
    <string name="comprar">Comprar</string>
    <string name="eliminar_item">Eliminar Item</string>
    <string name="eliminar_item_mensaje">¿Estás seguro de que quieres eliminar este elemento?</string>
    <string name="si">Si</string>
    <string name="no">No</string>

</resources>
