<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/txtVerCarroCompra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:paddingTop="@dimen/common_padding"
        android:paddingBottom="@dimen/common_padding"
        android:text="@string/carro_compra"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/small_header_text_size" />

    <TextView
        android:id="@+id/txtNombreProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtVerCarroCompra"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:padding="@dimen/common_padding"
        android:textAllCaps="true"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtDescProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtNombreProducto"
        android:paddingBottom="@dimen/common_padding"
        android:paddingTop="@dimen/common_padding"/>

    <ImageView
        android:id="@+id/imgImagenProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LayoutAccion"
        android:layout_below="@id/txtDescProducto"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp" />

    <LinearLayout
        android:id="@+id/LayoutAccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center_vertical|end"
            android:text="@string/cantidad" />

        <Spinner
            android:id="@+id/spCantidad"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />

        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:text="@string/agregar"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
